--- a/template/src/NavBar.css
+++ b/template/src/NavBar.css
@@ -1,5 +1,5 @@
-.navbar {
-    background-color: #f8f9fa;
+.navbaragus {
+    background-color: #1B262C;
     padding: 10px;
     height: 70px;
     align-items: center;
@@ -7,12 +7,12 @@
     justify-content: space-around;
 }
 
-.nav-link {
+.nav-linkagus {
     text-decoration: none;
-    color: #333;
+    color: #BBE1FA;
     font-size: 18px;
 }
 
-.nav-link:hover {
-    color: #007bff;
+.nav-linkagus:hover {
+    color: #3282B8;
 }
