--- a/template/src/NovedadesPage.css
+++ b/template/src/NovedadesPage.css
@@ -1,8 +1,9 @@
+.novedades-paragraph {
+    color: #1B262C;
+  }
 .novedades-container {
-    background-color: #1B262C;
     color: #BBE1FA;
     padding: 20px;
-    border-radius: 10px;
     width: 80%;
     margin: 0 auto;
 }
@@ -13,7 +14,7 @@
     border-radius: 10px;
 }
 
-.logout-button {
+.logout-button, .add-novedad-button {
     background-color: #3282B8;
     color: #BBE1FA;
     border: none;
@@ -40,3 +41,51 @@
 .delete-button:hover {
     background-color: #FF4500; /* Darker red color on hover */
 }
+
+.novedad {
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  .novedad h2 {
+    margin-top: 0;
+    color: #333;
+  }
+  
+  .novedad h3 {
+    color: #666;
+  }
+  
+  .novedad p {
+    color: #999;
+  }
+
+  .novedad-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .novedad-form input,
+  .novedad-form textarea {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+  }
+  
+  .novedad-form button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007BFF;
+    color: white;
+    cursor: pointer;
+  }
+  
+  .novedad-form button:hover {
+    background-color: #0056b3;
+  }
